# DOTD

./: README.md  dotd.py  dotd_overall_summary.json  fetch_single_dotd.py  latest_dotd.py  mapping.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: fetch.yml  fetch_single_dotd.yml
2016/: dotd_2016.json
2016/Abu Dhabi Grand Prix/: dotd.json
2016/Australian Grand Prix/: dotd.json
2016/Austrian Grand Prix/: dotd.json
2016/Bahrain Grand Prix/: dotd.json
2016/Belgian Grand Prix/: dotd.json
2016/Brazilian Grand Prix/: dotd.json
2016/British Grand Prix/: dotd.json
2016/Canadian Grand Prix/: dotd.json
2016/Chinese Grand Prix/: dotd.json
2016/European Grand Prix/: dotd.json
2016/German Grand Prix/: dotd.json
2016/Hungarian Grand Prix/: dotd.json
2016/Italian Grand Prix/: dotd.json
2016/Japanese Grand Prix/: dotd.json
2016/Malaysian Grand Prix/: dotd.json
2016/Mexican Grand Prix/: dotd.json
2016/Monaco Grand Prix/: dotd.json
2016/Russian Grand Prix/: dotd.json
2016/Singapore Grand Prix/: dotd.json
2016/Spanish Grand Prix/: dotd.json
2016/United States Grand Prix/: dotd.json
2017/: dotd_2017.json
2017/Abu Dhabi Grand Prix/: dotd.json
2017/Australian Grand Prix/: dotd.json
2017/Austrian Grand Prix/: dotd.json
2017/Azerbaijan Grand Prix/: dotd.json
2017/Bahrain Grand Prix/: dotd.json
2019/: dotd_2019.json
2020/: dotd_2020.json
2021/: dotd_2021.json
2022/: dotd_2022.json
2023/: dotd_2023.json
2024/: dotd_2024.json
2025/: dotd_2025.json
2026/: Chinese Grand Prix  dotd_2026.json
(+144 files in other folders)
