[project]
name = "dotd-fetcher"
version = "0.1.0"
description = "F1 Driver of the Day data fetcher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "tabstack>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]

[dependency-groups]
dev = []